# libserial-1

./: CMakeLists.txt  LICENSE  README.md  index.html  params.json
include/: version.h.in
include/rnr/: serdev.h
make/: Pkg.mk
make/deb-dev/: control
make/deb-doc/: control
make/deb-src/: control
src/libserial/: serdev.c
stylesheets/: styles.css
